turtleart.lessons.turtleart.Main.House.scala.error
Source:4: error: ')' expected but ';' found.
	avance(100;
                  ^